# synthBox

./: CMakeLists.txt
src/: AudioEngine.cpp  AudioEngine.h  MIDIProcessor.cpp  MIDIProcessor.h  Oscillator.cpp  Oscillator.h  Synth.cpp  Synth.h  main.cpp
